--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
       <p>Add your own images and styles!</p>
 
       <!-- TODO: PART I Add your own images and use CSS flex to make sure they work on different screen sizes -->
+      
       <div class="gallery-container">
-        <img class="gallery-item" src="./assets/jeff.jpg" alt="jeff watching u">
+        <img class="gallery-item" src="./assets/Bread_in_the_Hellenic_Republic.jpg" alt="bread">
+        <img class="gallery-item" src="./assets/Croissant.2e16d0ba.fill-1440x605.png" alt="croissant">
+        <img class="gallery-item" src="./assets/images-1.jpg" alt="images-1">
+        <img class="gallery-item" src="./assets/images.jpg" alt="image">
+        <img class="gallery-item" src="./assets/istockphoto-1140197448-170667a.jpg" alt="stock1">
+        <img class="gallery-item" src="./assets/istockphoto-1163707527-612x612.jpg" alt="stock2">
+
       </div>
 
       <!-- TODO: PART II Uncomment the line below, and hook up this button to display data from an API -->
